--- a/source/countries/templates/registration/sign_up.html
+++ b/source/countries/templates/registration/sign_up.html
@@ -1,9 +1,10 @@
 {% extends 'countries/base.html' %}
 {% block title %}Sign Up{% endblock %}
+{% load crispy_forms_tags %}
 {% block content %}
 <form method="post">
-{% csrf_token %}{{form}}
-<p>¿Ya tienes cuenta? Inicia sesión <a href="/login">aquí</a></p>
-<button type="submit" class="btn btn-success">Registrarse</button>
+{% csrf_token %}{{form|crispy}}
+<p>¿Ya tienes cuenta? Iniciar <a href="/sign_up">aquí</a></p>
+<button type="submit" class="btn btn-success">Iniciar sesión</button>
 </form>
 {% endblock %}
