--- a/source/countries/templates/countries/detail.html
+++ b/source/countries/templates/countries/detail.html
@@ -104,6 +104,7 @@
                     <td>{{ country.timezones|join:', ' }}</td>
                 </tr>
             </table>
+            {% include 'countries/favoritos.html' %}
         </div>
     {% endfor %}
 </body>    
