Caso de uso busqueda por capital

--- a/source/countries/templates/countries/base.html
+++ b/source/countries/templates/countries/base.html
@@ -18,6 +18,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/language">Search by language</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/capital">Search by capital</a>
+                    </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="/favoritos">Mis Favoritos</a>
