Caso de uso busqueda por moneda

--- a/source/countries/templates/countries/base.html
+++ b/source/countries/templates/countries/base.html
@@ -21,6 +21,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/capital">Search by capital</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/currency">Search by currency</a>
+                    </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="/favoritos">Mis Favoritos</a>
