--- a/source/countries/templates/countries/currency.html
+++ b/source/countries/templates/countries/currency.html
@@ -1,6 +1,6 @@
 
 {% extends 'countries/base.html' %}
-{% block title %}Países por Idioma{% endblock %}
+{% block title %}PAÍSES POR MONEDA{% endblock %}
 {% block content %}
 <style>
     body {
@@ -33,7 +33,7 @@
 
 </style>
 <body>
-    <h1>Este idioma se habla en:</h1>
+    <h1>Este moneda es de:</h1>
     <ul class="country-list">
         {% for country in data %}
         <li class="country-item">
