--- a/source/countries/templates/countries/b_currency.html
+++ b/source/countries/templates/countries/b_currency.html
@@ -6,7 +6,7 @@
 <div id="search-box">
     <form id="search-form" method="post">
         {% csrf_token %}
-        <input id="search-text" type="text" name="country_currency" placeholder="Buscar país por moneda">
+        <input id="search-text" type="text" name="country_currency" placeholder="Buscar país por divisa">
         <button id="search-button" type="submit">Buscar</button>
     </form>
 </div>
