--- a/source/countries/templates/countries/currency.html
+++ b/source/countries/templates/countries/currency.html
@@ -1,10 +1,25 @@
-
 {% extends 'countries/base.html' %}
 {% block title %}PAÍSES POR MONEDA{% endblock %}
 {% block content %}
 <style>
     body {
-        font-family: Arial, sans-serif;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-color: #f8f9fa;
+        margin: 0;
+        padding: 0;
+    }
+    h1 {
+        text-align: center;
+        margin-top: 1em;
+        font-weight: bold;
+        margin-bottom: 1em;
+        font-size: 2em;
+        color: #333;
+    }
+    .country-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     .country-grid {
         display: grid;
@@ -12,36 +27,53 @@
         gap: 20px;
         list-style-type: none;
         padding: 0;
+        width: 80%;
+        margin: auto;
     }
     .country-item {
         display: flex;
         flex-direction: column;
         align-items: center;
         text-align: center;
-        border: 1px solid #ccc;
+        border: 1px solid #ddd;
         border-radius: 8px;
-        padding: 10px;
+        padding: 20px;
+        background-color: #fff;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        transition: transform 0.2s, box-shadow 0.2s;
+    }
+    .country-item:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     }
     .country-item img {
         max-width: 100px;
         max-height: 100px;
         margin-bottom: 10px;
+        border: 2px solid #000;
+        border-radius: 5px;
+        transition: transform 0.2s;
+    }
+    .country-item:hover img {
+        transform: scale(1.05);
     }
     .country-item span {
         font-size: 1.2em;
+        color: #555;
     }
-
 </style>
 <body>
-    <h1>Este moneda es de:</h1>
-    <ul class="country-list">
-        {% for country in data %}
-        <li class="country-item">
-            <img src="{{ country.flags.svg }}" alt="Bandera de {{ country.name.common }}">
-            <span>{{ country.name.common }}</span>
-        </li>
-        {% endfor %}
-    </ul>
+    <h1>Este divisa se usa en:</h1>
+    <div class="country-container">
+        <ul class="country-grid">
+            {% for country in data %}
+            <li class="country-item">
+                <img src="{{ country.flags.svg }}" alt="Bandera de {{ country.name.common }}">
+                <span>{{ country.name.common }}</span>
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
 </body>
 </html>
 {% endblock %}
