--- a/source/countries/templates/countries/detail.html
+++ b/source/countries/templates/countries/detail.html
@@ -2,8 +2,19 @@
 {% block title %}Country Detail{% endblock %}
 {% block content %}
 <style>
+    body {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-color: #f8f9fa;
+        margin: 0;
+        padding: 0;
+    }
     h1 {
         text-align: center;
+        margin-top: 0.5em;
+        font-weight: bold;
+        margin-bottom: 0.5em;
+        font-size: 2.5em;
+        color: #333;
     }
 
     p {
