--- a/source/countries/templates/countries/base.html
+++ b/source/countries/templates/countries/base.html
@@ -24,6 +24,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/currency">Search by currency</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/order">Order by</a>
+                    </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="/favoritos">Mis Favoritos</a>
