C.U. comparar países (faltan cosas)

--- a/source/countries/templates/countries/base.html
+++ b/source/countries/templates/countries/base.html
@@ -27,6 +27,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/order">Order by</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/comp_countries">Compare Countries</a>
+                    </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="/favoritos">Mis Favoritos</a>
