--- a/source/countries/templates/countries/currency.html
+++ b/source/countries/templates/countries/currency.html
@@ -1,5 +1,6 @@
 {% extends 'countries/base.html' %}
 {% block title %}PAÍSES POR MONEDA{% endblock %}
+{% load static %}
 {% block content %}
 <style>
     body {
