--- a/source/countries/templates/countries/comp_countries.html
+++ b/source/countries/templates/countries/comp_countries.html
@@ -4,65 +4,90 @@
 {% block content %}
 
 <style>
-
-.container{
-    text-align:center
+.container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    margin-top: 2em;
+    text-align: center;
 }
 
-.columna1{
-    margin-top:2em;
-    float:left;
-    width:33%;
-    border:0px solid;
+.columna {
+    flex: 1;
+    margin: 0 1em;
 }
 
-.columna2{
-    margin-top:2em;
-    float:center;
-    width:33%;
-    border:0px solid;
-}
-
-
-.columna3{
-    margin-top:2em;
-    float:right;
-    width:33%;
-    border:0px solid;
-}
-
-.flag{
-    width:400px;
-    height:250px;
+.flag {
+    width: 300px;
+    height: 200px;
 }
 
 .center-img {
-    text-align:center
+    text-align: center;
 }
 
+.center-img img {
+    width: 700px; /* Increase the width */
+    height: 500px; /* Increase the height */
+}
+
+.nav-bar {
+    display: flex;
+    justify-content: center;
+    margin-top: 1em;
+}
+
+.nav-bar button {
+    margin: 0 0.5em;
+    padding: 0.5em 1em;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.nav-bar button:hover {
+    background-color: #45a049;
+}
 </style>
 
 <body>
-
     <div class="container">
-        <div class="columna1">
+        <div class="columna">
             <div class="country">
                 <img src="{{ country1.flags.svg }}" alt="Flag of {{ country1.name.common }}" class="flag">
                 <p class="country-name">{{ country1.name.common }}</p>
             </div>
         </div>
-        <div class="columna">
-            <div class="center-img">
-                <img src="{% static "images/comparison_area.png" %} " alt="Center Image" class="center-png">
+        <div class="columna center-img">
+            <img id="centerImage" src="{% static 'images/comparison_area.png' %}" alt="Center Image" class="center-png">
+            <div class="nav-bar">
+                <button onclick="changeImage(0)">Area</button>
+                <button onclick="changeImage(1)">Population</button>
+                <button onclick="changeImage(2)">Density</button>
             </div>
-        </div>    
-        <div class="columna3">
-            <div class= "country">
-                <img src="{{ country2.flags.svg }}" alt="Flag1 of {{ country2.name.common }}" class="flag">
+        </div>
+        <div class="columna">
+            <div class="country">
+                <img src="{{ country2.flags.svg }}" alt="Flag of {{ country2.name.common }}" class="flag">
                 <p class="country-name">{{ country2.name.common }}</p>
-            <div class= "country">
+            </div>
         </div>
     </div>
+
+    <script>
+        function changeImage(imageNumber) {
+            var centerImage = document.getElementById('centerImage');
+            var images = [
+                "{% static 'images/comparison_area.png' %}",
+                "{% static 'images/comparison_population.png' %}",
+                "{% static 'images/comparison_density.png' %}",
+            ];
+            centerImage.src = images[imageNumber];
+        }
+    </script>
 </body>
 </html>
 
