--- a/source/countries/templates/countries/base.html
+++ b/source/countries/templates/countries/base.html
@@ -41,9 +41,10 @@
                 <ul class="navbar-nav">
                     {% if user.is_authenticated %}
                     <span class="navbar-text">Sesión iniciada como {{user.username}} | </span>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/logout">Logout</a>
-                    </li>
+                    <form action="/logout" method="post" class="nav-link">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-link">Cerrar sesión</button>
+                    </form>                    
                     {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="/login">Login</a>
