--- a/source/countries/templates/countries/detail.html
+++ b/source/countries/templates/countries/detail.html
@@ -42,6 +42,7 @@
     .country-details {
         width: 80%;
         margin: auto;
+        margin-bottom: 3em;
         border-collapse: collapse;
     }
 
@@ -49,19 +50,21 @@
     .country-details td {
         border: 1px solid #ddd;
         padding: 8px;
+        text-align: center;
     }
 
     .country-details th {
         padding-top: 12px;
         padding-bottom: 12px;
-        text-align: left;
+        text-align: center;
         background-color: #f2f2f2;
     }
 
 </style>
 <body>
-    {% for country in data %}
-        <div class="country-container">
+    <div class="country-container">
+        {% for country in country_data %}
+            <!-- Datos sobre el país de la capital -->
             <h1 class="country-name">{{ country.name.common | upper}}</h1>
             <div class="country-image">
                 <img src="{{country.flags.png}}">
@@ -115,9 +118,29 @@
                     <td>{{ country.timezones|join:', ' }}</td>
                 </tr>
             </table>
-            {% include 'countries/favoritos.html' %}
-        </div>
-    {% endfor %}
+        {% endfor %}
+        
+        <!-- Pronóstico diario del clima -->
+        <h2>Pronóstico climático semanal en {{ country_data.0.name.common}}</h2>
+        <table class="country-details">
+            <tr>
+                <th>Fecha</th>
+                <th>Temperatura Máxima (°C)</th>
+                <th>Temperatura Mínima (°C)</th>
+                <th>Temperatura Promedio (°C)</th>
+                <th>Descripción</th>
+            </tr>
+            {% for forecast in forecast_data %}
+            <tr>
+                <td>{{ forecast.datetime }}</td>
+                <td>{{ forecast.tempmax }} °C</td>
+                <td>{{ forecast.tempmin }} °C</td>
+                <td>{{ forecast.temp }} °C</td>
+                <td>{{ forecast.description}}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
 </body>    
 {% endblock %}
 
