--- a/source/countries/templates/countries/home.html
+++ b/source/countries/templates/countries/home.html
@@ -114,9 +114,9 @@
         </div>
         <div id="spinner-container">
             <div class="spinner-border text-primary" role="status">
-                <span class="visually-hidden">Cargando...</span>
+                <span class="visually-hidden">Obteniendo datos de las APIs...</span>
             </div>
-            <p>Cargando...</p>
+            <p>Obteniendo datos de las APIs...</p>
         </div>
     </div>
 
