--- a/source/countries/templates/countries/base.html
+++ b/source/countries/templates/countries/base.html
@@ -41,13 +41,13 @@
                 <ul class="navbar-nav">
                     {% if user.is_authenticated %}
                     <span class="navbar-text">Sesión iniciada como {{user.username}} | </span>
-                    <form action="/logout" method="post" class="nav-link">
+                    <form action="/users/logout" method="post" class="nav-link">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-link">Cerrar sesión</button>
                     </form>                    
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="/login">Login</a>
+                        <a class="nav-link" href="/users/login">Login</a>
                     </li>
                     {% endif %}
                 </ul>
