Aplicación para ordenación de países por área y población creada

--- a/source/countries/templates/countries/base.html
+++ b/source/countries/templates/countries/base.html
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="/currency">Search by currency</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/order">Order by</a>
+                        <a class="nav-link" href="/order/order">Order by</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/comp_countries">Compare Countries</a>
