--- a/source/order/templates/order/order.html
+++ b/source/order/templates/order/order.html
@@ -109,10 +109,10 @@
     <div id="search-container">
         <h1>Ordenar países</h1>
         <div id="search-box">
-            <button class="order-button" onclick="window.location.href='/population_asc/'">Población Ascendente</button>
-            <button class="order-button" onclick="window.location.href='/population_desc/'">Población Descendente</button>
-            <button class="order-button" onclick="window.location.href='/area_asc/'">Área Ascendente</button>
-            <button class="order-button" onclick="window.location.href='/area_desc/'">Área Descendente</button>
+            <button class="order-button" onclick="window.location.href='/order/population_asc/'">Población Ascendente</button>
+            <button class="order-button" onclick="window.location.href='/order/population_desc/'">Población Descendente</button>
+            <button class="order-button" onclick="window.location.href='/order/area_asc/'">Área Ascendente</button>
+            <button class="order-button" onclick="window.location.href='/order/area_desc/'">Área Descendente</button>
         </div>
     </div>
 </body>
