--- a/source/countries/templates/countries/b_idioma.html
+++ b/source/countries/templates/countries/b_idioma.html
@@ -30,7 +30,10 @@
         margin-bottom: 2em;
         font-size: 1.5em;
         color: #555;
-    }searc{
+    }
+    #search-container {
+        display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         height: 80vh; /* Adjusted to keep some space for the header */
