--- a/source/countries/templates/countries/base.html
+++ b/source/countries/templates/countries/base.html
@@ -16,7 +16,7 @@
                         <a class="nav-link" href="/home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/capital">Search by capital</a>
+                        <a class="nav-link" href="/capitals/search">Search by capital</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/language">Search by language</a>
