Aplicación para búsqueda por idioma creada

--- a/source/countries/templates/countries/base.html
+++ b/source/countries/templates/countries/base.html
@@ -19,7 +19,7 @@
                         <a class="nav-link" href="/capitals/search">Search by capital</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/language">Search by language</a>
+                        <a class="nav-link" href="/languages/search">Search by language</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/currency">Search by currency</a>
