--- a/source/countries/templates/countries/detail.html
+++ b/source/countries/templates/countries/detail.html
@@ -118,7 +118,7 @@
         </table>
                 
         <!-- Pronóstico diario del clima -->
-        <h2>Pronóstico climático semanal en {{ country_data.0.name.common}}</h2>
+        <h2>Pronóstico climático semanal en {{ country_data.name.common}}</h2>
         <table class="country-details">
             <tr>
                 <th>Fecha</th>
