--- a/source/languages/templates/languages/b_idioma.html
+++ b/source/languages/templates/languages/b_idioma.html
@@ -27,7 +27,6 @@
 
     h2 {
         text-align: center;
-        margin-bottom: 2em;
         font-size: 1.5em;
         color: #555;
     }
@@ -42,6 +41,7 @@
     #search-box {
         background-color: #fff;
         padding: 30px;
+        margin-top: 2em;
         border-radius: 8px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         width: 100%;
@@ -97,8 +97,8 @@
 <body>
     <div id="search-container">
         <h1>Busque países por idioma</h1>
-        <h2>Introduzca un idioma para obtener todos los países en los que se habla.
-        Por ejemplo: spanish, english</h2>
+        <h2>Introduzca un idioma para obtener todos los países en los que se habla dicho idioma.</h2>
+        <h2>Por ej: Spanish, English, Arabic... (la primera letra debe ir en mayúscula)</h2>
         <div id="search-box">
             <form id="search-form" method="post">
                 {% csrf_token %}
